@@ -111,6 +111,8 @@ void Cookfs_PagesSetAside(Cookfs_Pages *p, Cookfs_Pages *aside);
 void Cookfs_PagesSetIndex(Cookfs_Pages *p, Tcl_Obj *dataIndex);
 Tcl_Obj *Cookfs_PagesGetIndex(Cookfs_Pages *p);
 
+Tcl_WideInt Cookfs_PagesGetPageOffset(Cookfs_Pages *p, int idx);
+
 #endif /* COOKFS_USECPAGES */
 
 #endif /* COOKFS_PAGES_H */
