@@ -58,11 +58,11 @@ tcltest::test cookfsPages-1.5 "Check dataoffset command reporting properly for e
     $pg delete
 
     set pg [cookfs::pages -readonly $file]
-    $pg dataoffset
+    format %d,%d,%d [$pg dataoffset] [$pg dataoffset 0] [$pg dataoffset 1]
 } -cleanup {
     $pg delete
     catch {file delete -force $file}
-} -returnCodes {ok} -result 0
+} -returnCodes {ok} -result 0,0,5
 
 tcltest::test cookfsPages-1.6 "Check dataoffset command reporting properly for files with prefix" -setup {
     set file [tcltest::makeFile {} pages.cfs]
@@ -76,11 +76,11 @@ tcltest::test cookfsPages-1.6 "Check dataoffset command reporting properly for f
     $pg delete
 
     set pg [cookfs::pages -readonly $file]
-    $pg dataoffset
+    format %d,%d,%d [$pg dataoffset] [$pg dataoffset 0] [$pg dataoffset 1]
 } -cleanup {
     $pg delete
     catch {file delete -force $file}
-} -returnCodes {ok} -result 4096
+} -returnCodes {ok} -result 4096,4096,4101
 
 tcltest::test cookfsPages-1.7 "Check filesize command reporting properly for empty archives" -setup {
     set file [tcltest::makeFile {} pages.cfs]
