@@ -1,3 +1,10 @@
+2012-03-12 Wojciech Kocjan <zoro2@users.sourceforge.net>
+	* generic/pages.c: Added support for dataoffset command to return offset to specific pages
+	* generic/pages.h:
+	* generic/pagesCmd.c:
+	* scripts/pages.tcl:
+	* tests/pages.test:
+
 2012-02-28 Wojciech Kocjan <zoro2@users.sourceforge.net>
 	* generic/pages.c: Added more verbose error information to cookfs
 	* generic/pages.h:
